--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -37,8 +37,7 @@ header {
 .learn-more-a {
   text-decoration: none;
   cursor: pointer;
-  display: table;
-  margin: auto;
+  display: inline-block;
 }
 
 header > #logo {
@@ -589,6 +588,7 @@ header > nav > ul {
   width: 100%;
   margin-top: 4.5rem;
   margin-bottom: 3rem;
+  text-align: center;
 }
 
 #learn-more {
