--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -2122,8 +2122,14 @@ header {
         display: none;
     }
 
+    .r-man{
+        margin-left: -12rem;
+    }
+
     .r-man h1{
-        display: none;
+        font-size: 64px;
+        margin-left: 40vw;
+        margin-top: -3rem;
     }
 
     .pics-m{
@@ -2318,6 +2324,13 @@ header {
         /* margin-left: -29rem; */
         width: 80vw;
     }
+    .r-man{
+        margin-left: -13rem;
+    }
+
+    .r-man h1{
+        margin-left: 43vw;
+    }
 }
 
 @media (max-width: 670px){
@@ -2360,6 +2373,12 @@ header {
     .m-4{
         margin-top: -9rem;
     }
+    .r-man{
+        margin-left: -14rem;
+    }
+    .r-man h1{
+        margin-left: 44vw;
+    }
 }
 
 @media (max-width: 620px){
@@ -2401,6 +2420,13 @@ header {
         margin-top: -12rem;
         margin-bottom: -2.5rem;
         
+    }
+    .r-man{
+        margin-left: -14rem;
+    }
+
+    .r-man h1{
+        margin-left: 44vw;
     }
 }
 
@@ -2587,6 +2613,18 @@ header {
     .top1, .top2, .top3{
         margin-bottom: .5rem;
     }
+    .r-man{
+        margin-left: -11.5rem;
+    }
+    .r-man h1{
+        margin-left: 15vw;
+        margin-top: -4rem;
+        width: 25vw;
+        transform: scaleX(1);
+    }
+    .r-man span{
+        margin-left: 2rem;
+    }
 }
 
 @media (max-width: 490px){
@@ -2671,6 +2709,12 @@ header {
     .top1, .top2, .top3{
         margin-bottom: 0.3rem;
     }
+    .r-man{
+        margin-left: -12rem;
+    }
+    .r-man h1{
+        margin-left: 3rem;
+    }
 }
 
 @media(max-width: 440px){
@@ -2679,6 +2723,12 @@ header {
     }
     .poster{
         margin-top: 10.5rem;
+    }
+    .r-man{
+        margin-left: -11.5rem;
+    }
+    .r-man h1{
+        margin-left: 2rem;
     }
 }
 
@@ -2765,6 +2815,12 @@ header {
     .top1, .top2, .top3{
         margin-bottom: 0.1rem;
     }
+    .r-man{
+        margin-left: -11.8rem;
+    }
+    .r-man h1{
+        margin-left: 1rem;
+    }
 }
 
 @media(max-width: 400px){
@@ -2822,6 +2878,11 @@ header {
     }
     .img1{
         margin-left: 50vw;
+    }
+    .r-man h1{
+        font-size: 64px;
+        /* width: 20vw; */
+        
     }
 }
 
@@ -3007,6 +3068,12 @@ header {
     }
     .heading h2{
         font-size: 2rem;
+    }
+    .r-man{
+        margin-left: -10rem;
+    }
+    .r-man h1{
+        margin-left: -2rem;
     }
 }
 
