--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -481,7 +481,8 @@ header {
     gap: 1rem;
     justify-content: center;
     margin-top: 1rem;
-    margin-left: 8rem;
+    text-align: center;
+    align-items: center;
 }
 
 .apps img {
@@ -1091,9 +1092,6 @@ header {
         width: 13.5rem;
     }
 
-    .apps {
-        margin-left: 0rem;
-    }
 
     .rect2,
     .rect3 {
@@ -1429,9 +1427,6 @@ header {
         width: 12rem;
     }
 
-    .apps {
-        margin-left: 2rem;
-    }
 
     .arrow {
         margin-top: -.4rem;
@@ -2308,9 +2303,8 @@ header {
 
     .apps{
         flex-direction: column;
-        margin-left: 37vw;
         margin-bottom: 5rem;
-        margin-top: 5rem;
+        margin-top: 0;
     }
 
     .apps img{
@@ -2569,9 +2563,7 @@ header {
         margin-top: 18rem;
         margin-left: 53vw;
     }
-    .apps{
-        margin-left: 31vw;
-    }
+
 }
 
 @media (max-width: 530px){
@@ -2607,9 +2599,7 @@ header {
         width: 28rem;
         height: 94rem;
     }
-    .apps{
-        margin-left: 28vw;
-    }
+
     .top1, .top2, .top3{
         margin-bottom: .5rem;
     }
@@ -2661,15 +2651,11 @@ header {
     .poster{
         margin-top: 12rem;
     }
-    .apps{
-        margin-left: 30vw;
-    }
+
     .wheel h1{
         margin-top: -7rem;
     }
-    .apps{
-        margin-left: 28vw;
-    }
+
     .bg-img img{
         width: 27rem;
     }
@@ -2790,9 +2776,7 @@ header {
     .img1{
         margin-left: 52vw;
     }
-    .apps{
-        margin-left: 25vw;
-    }
+
     .heading h2{
         font-size: 2.4rem;
     }
@@ -2942,9 +2926,7 @@ header {
     .bg-img img{
         width: 20rem;
     }
-    .apps{
-        margin-left: 23vw;
-    }
+
 }
 
 @media(max-width: 370px){
@@ -3063,9 +3045,7 @@ header {
         width: 320px;
         margin-top: 17.3rem;
     }
-    .apps{
-        margin-left: 18.5vw;
-    }
+
     .heading h2{
         font-size: 2rem;
     }
