--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -1946,6 +1946,12 @@ header {
 
 
 @media(max-width: 780px){
+
+    #header-hr{
+        border: none;
+        border-top: 2px solid #D21717;
+    }
+
     .top-X{
         display: none;
     }
@@ -2119,12 +2125,23 @@ header {
 
     .r-man{
         margin-left: -12rem;
+        /* align-items: center; */
     }
 
     .r-man h1{
-        font-size: 64px;
+        /* font-size: 64px;
         margin-left: 40vw;
-        margin-top: -3rem;
+        margin-top: -3rem; */
+        display: none;
+    }
+
+    .r-man p{
+        font-size: 64px;
+        margin-left: 50%;
+        margin-top: -3.5rem;
+        z-index: 1;
+        margin-bottom: 2rem;
+        text-align: center;
     }
 
     .pics-m{
@@ -2267,6 +2284,8 @@ header {
     .m-5 h1{
         margin-left: 6rem;
         margin-bottom: -5px;
+        position: relative;
+        z-index: 1;
     }
 
     .m5-txt{
@@ -2277,7 +2296,7 @@ header {
         width: 11rem;
         height: 20rem;
         position: relative;
-        z-index: 1;
+        z-index: 2;
     }
 
     .m5-txt h1{
@@ -2368,10 +2387,8 @@ header {
         margin-top: -9rem;
     }
     .r-man{
-        margin-left: -14rem;
-    }
-    .r-man h1{
-        margin-left: 44vw;
+        margin-left: -11rem;
+        /* margin-right: auto; */
     }
 }
 
@@ -2695,11 +2712,8 @@ header {
     .top1, .top2, .top3{
         margin-bottom: 0.3rem;
     }
-    .r-man{
-        margin-left: -12rem;
-    }
-    .r-man h1{
-        margin-left: 3rem;
+    .r-man p{
+        margin-left: 40%;
     }
 }
 
@@ -3061,6 +3075,12 @@ header {
 
 @media(min-width: 781px){
     .bg-img{
+        display: none;
+    }
+    #header-hr{
+        display: none;
+    }
+    .r-man p{
         display: none;
     }
 }
