--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -1945,7 +1945,7 @@ header {
 /********************* Mobile View *******************/
 
 
-@media(max-width: 780px){
+@media(max-width: 550px){
 
     #header-hr{
         border: none;
@@ -2332,21 +2332,7 @@ header {
     }
 }
 
-@media(max-width: 740px){
-    .right-cont p{
-        /* margin-left: -29rem; */
-        width: 80vw;
-    }
-    .r-man{
-        margin-left: -13rem;
-    }
-
-    .r-man h1{
-        margin-left: 43vw;
-    }
-}
-
-@media (max-width: 670px){
+/* @media (max-width: 670px){
 
     .m-5{
         margin-left: 2rem;
@@ -2388,9 +2374,8 @@ header {
     }
     .r-man{
         margin-left: -11rem;
-        /* margin-right: auto; */
     }
-}
+} */
 
 @media (max-width: 620px){
     .m-1{
@@ -3073,7 +3058,7 @@ header {
 
 
 
-@media(min-width: 781px){
+@media(min-width: 551px){
     .bg-img{
         display: none;
     }
@@ -3083,4 +3068,129 @@ header {
     .r-man p{
         display: none;
     }
+}
+
+@media (max-width: 780px){
+    .top-X{
+        display: none;
+    }
+    .fantasy-head{
+        margin-top: 3rem;
+    }
+    .head-txt h1{
+        font-size: 28px;
+    }
+    .head-txt h2{
+        font-size: 44px;
+        font-weight: normal;
+    }
+    .arrow{
+        margin-left: 27rem;
+        font-size: 1.6rem;
+    }
+    .wheel{
+        margin-top: 0;
+    }
+    .wheel h1{
+        margin-top: -6rem;
+        font-size: 67px;
+    }
+    .bts h2{
+        font-size: 36px;
+        margin-top: 4rem;
+    }
+    .bts p{
+        font-size: 1rem;
+        width: 75vw;
+    }
+    .pics h1{
+        font-size: 17px;
+    }
+    .pics p{
+        font-size: 11px;
+    }
+    .center{
+        margin-left: 1.6rem;
+    }
+    .center img{
+        height: 450.48px;
+        width: 200px;
+        z-index: 2;
+    }
+    .left-most img{
+        height: 289.75px;
+        margin-left: -1.5rem;
+        z-index: 2;
+    }
+    .left-most p{
+        width: 7rem;
+        margin-top: 5.8rem;
+    }
+    .left{
+        margin-top: 12rem;
+        margin-left: -8.5rem;
+    }
+    .left img{
+        height: 280.17px;
+        width: 160px;
+    }
+    .left p{
+        width: 7rem;
+        line-height: 14px;
+    }
+    .right{
+        margin-left: -6rem;
+    }
+    .right p{
+        width: 8rem;
+    }
+    .right img{
+        width: 170px;
+    }
+    .right-most{
+        margin-left: 0rem;
+    }
+    .right-most p{
+        margin-right: 4rem;
+    }
+    .img1{
+        height: 476px;
+        width: 359px;
+        z-index: 5;
+    }
+    .left-rect{
+        margin-left: -8rem;
+    }
+    .right-rect{
+        margin-top: 10rem;
+        /* margin-left: 10rem; */
+        margin-right: -10rem;
+    }
+    .r-man{
+        margin-top: -5.5rem;
+        margin-left: -12.5rem;
+    }
+    .r-man h1{
+        font-size: 68px;
+        margin-top: -3rem;
+        z-index: 10;
+    }
+    .apps img{
+        width: 11rem;
+        height: 3.5rem;
+    }
+    .rect6{
+        margin-bottom: -8rem;
+    }
+    .pics{
+        margin-top: 6rem;
+    }
+    .left-most h1{
+        position: relative;
+        z-index: 1;
+    }
+}
+
+@media (max-width: 730px){
+    
 }
