--- a/assets/styles/play.css
+++ b/assets/styles/play.css
@@ -1945,7 +1945,14 @@ header {
 /********************* Mobile View *******************/
 
 
-@media(max-width: 550px){
+
+
+
+
+
+
+
+@media(max-width: 600px){
 
     #header-hr{
         border: none;
@@ -2031,7 +2038,7 @@ header {
     .bg-img img{
         position: absolute;
         height: 100rem;
-        width: 42rem;
+        width: 34rem;
         margin-left: 2rem;
         overflow: hidden;
     }
@@ -2068,7 +2075,7 @@ header {
     }
 
     .title h1{
-        margin-left: 10vw;
+        margin-left: 2rem;
         font-size: 6rem;
     }
 
@@ -2080,13 +2087,13 @@ header {
 
     .right-cont p{
         font-size: 1.2rem;
-        width: 70vw;
+        width: 30rem;
         line-height: 1.5rem;
-        margin-left: -25rem;
+        margin-left: -21rem;
     }
 
     .m-t2 h1{
-        margin-left: 24vw;
+        margin-left: 22vw;
     }
 
     .m-t2 p{
@@ -2094,7 +2101,7 @@ header {
     }
 
     .m-t3 h1{
-        margin-left: 17vw;
+        margin-left: 15vw;
     }
 
     .m-t3 p{
@@ -2125,13 +2132,9 @@ header {
 
     .r-man{
         margin-left: -12rem;
-        /* align-items: center; */
     }
 
     .r-man h1{
-        /* font-size: 64px;
-        margin-left: 40vw;
-        margin-top: -3rem; */
         display: none;
     }
 
@@ -2249,13 +2252,13 @@ header {
     }
 
     .m-4{
-        margin-left: 75vw;
-        margin-top: -12rem;
+        margin-left: 82vw;
+        margin-top: -10rem;
     }
 
     .m-4 p{
         width: 10rem;
-        margin-left: -6.5rem;
+        margin-left: -7rem;
     }
 
     .m4-txt{
@@ -2266,19 +2269,20 @@ header {
     .m4-txt h1{
         transform:rotate(270deg);
         margin-right: -25rem;
-        margin-top: -12rem;
-        
+        margin-top: -12.5rem;
+        z-index: 1;
     }
 
     .m4-txt img{
-        width: 16rem;
+        width: 14rem;
         height: 28rem;
         overflow: hidden;
+        z-index: 2;
     }
 
     .m-5{
-        margin-top: -18rem;
-        margin-left: 5rem;
+        margin-top: -20rem;
+        margin-left: 0rem;
     }
 
     .m-5 h1{
@@ -2293,8 +2297,8 @@ header {
     }
 
     .m5-txt img{
-        width: 11rem;
-        height: 20rem;
+        width: 9rem;
+        height: 17rem;
         position: relative;
         z-index: 2;
     }
@@ -2316,8 +2320,11 @@ header {
         margin-left: 57vw;
         height: 30rem;
         width: 22rem;
-        margin-top: 11.5rem;
-        z-index: 1;
+        margin-top: 16.7rem;
+        z-index: 5;
+    }
+    .r-man p{
+        z-index: 10;
     }
 
     .apps{
@@ -2330,99 +2337,10 @@ header {
         height: 4.5rem;
         width: 14rem;
     }
-}
 
-/* @media (max-width: 670px){
 
-    .m-5{
-        margin-left: 2rem;
-        margin-top: -21rem;
-    }
-    .m5-txt p{
-        margin-left: 1rem;
-    }
-    .m3-txt p{
-        margin-left: 0;
-    }
-    .right-cont p{
-        margin-left: -24rem;
-        width: 85vw;
-        font-size: 1.1rem;
-    }
-    .bg-img img{
-        height: 90rem;
-        width: 36rem;
-        margin-left: 2rem;
-    }
-    .bg-text{
-        margin-top: 9rem;
-        margin-left: 5rem;
-    }
-    .img1{
-        margin-left: 52vw;
-        margin-top: 14.5rem;
-    }
-    .m-1{
-        margin-left: 22vw;
-    }
-    .m3-txt img{
-        height: 24rem;
-        width: 13rem;
-    }
-    .m-4{
-        margin-top: -9rem;
-    }
-    .r-man{
-        margin-left: -11rem;
-    }
-} */
-
-@media (max-width: 620px){
-    .m-1{
-        margin-left: 20vw;
-    }
-
-    .m-4{
-        margin-left: 80vw;
-    }
-
-    .m-3{
-        margin-left: 3vw;
-    }
-
-    .img1{
-        margin-left: 54vw;
-    }
-
-    .title h1{
-        margin-left: 2rem;
-    }
-
-    .m-t2{
-        margin-left: 10rem;
-    }
-
-    .m-t3{
-        margin-left: 5rem;
-    }
-
-    .right-cont p{
-        /* margin-left: -28rem; */
-        width: 90vw;
-    }
-
-    .m4-txt h1{
-        margin-right: -26rem;
-        margin-top: -12rem;
-        margin-bottom: -2.5rem;
-        
-    }
-    .r-man{
-        margin-left: -14rem;
-    }
-
-    .r-man h1{
-        margin-left: 44vw;
+    .heading h1{
+        -webkit-text-stroke-width: 1px;
     }
 }
 
@@ -2542,7 +2460,8 @@ header {
         margin-bottom: 0;
     }
     .m-5{
-        margin-top: -17.5rem;
+        margin-top: -16rem;
+        margin-left: 1rem;
     }
     .m-5 h1{
         margin-left: 4rem;
@@ -2562,7 +2481,7 @@ header {
         margin-top: 5rem;
     }
     .img1{
-        margin-top: 18rem;
+        /* margin-top: 18rem; */
         margin-left: 53vw;
     }
 
@@ -2601,15 +2520,13 @@ header {
         width: 28rem;
         height: 94rem;
     }
-
     .top1, .top2, .top3{
         margin-bottom: .5rem;
     }
     .r-man{
-        margin-left: -11.5rem;
+        margin-left: -13rem;
     }
     .r-man h1{
-        margin-left: 15vw;
         margin-top: -4rem;
         width: 25vw;
         transform: scaleX(1);
@@ -2697,9 +2614,6 @@ header {
     .top1, .top2, .top3{
         margin-bottom: 0.3rem;
     }
-    .r-man p{
-        margin-left: 40%;
-    }
 }
 
 @media(max-width: 440px){
@@ -2710,10 +2624,10 @@ header {
         margin-top: 10.5rem;
     }
     .r-man{
-        margin-left: -11.5rem;
+        margin-left: -13.5rem;
     }
-    .r-man h1{
-        margin-left: 2rem;
+    .m-2 h1{
+        margin-left: 79.5vw;
     }
 }
 
@@ -2751,7 +2665,7 @@ header {
         margin-left: 0;
     }
     .m-2 h1{
-        margin-left: 71.8vw;
+        margin-left: 72vw;
     }
     .m-2{
         margin-left: 2rem;
@@ -2801,8 +2715,8 @@ header {
     .r-man{
         margin-left: -11.8rem;
     }
-    .r-man h1{
-        margin-left: 1rem;
+    .r-man p{
+        margin-left: 40%;
     }
 }
 
@@ -2916,7 +2830,7 @@ header {
         width: 7rem;
     }
     .m-5 {
-        margin-top: -16.4rem;
+        margin-top: -15.5rem;
     }
     .img1{
         width: 328px;
@@ -2924,6 +2838,9 @@ header {
     }
     .bg-img img{
         width: 20rem;
+    }
+    .r-man p{
+        margin-left: 45%;
     }
 
 }
@@ -3037,6 +2954,9 @@ header {
     .m-4 p{
         margin-left: -9rem;
     }
+    .m-5{
+        margin-top: -15rem;
+    }
     .m-5 p{
         width: 5rem;
     }
@@ -3051,14 +2971,14 @@ header {
     .r-man{
         margin-left: -10rem;
     }
-    .r-man h1{
-        margin-left: -2rem;
+    .r-man p{
+        margin-left: 35%;
     }
 }
 
 
 
-@media(min-width: 551px){
+@media(min-width: 601px){
     .bg-img{
         display: none;
     }
@@ -3070,7 +2990,7 @@ header {
     }
 }
 
-@media (max-width: 780px){
+@media (max-width: 780px) and (min-width:601px){ 
     .top-X{
         display: none;
     }
@@ -3112,6 +3032,9 @@ header {
     .center{
         margin-left: 1.6rem;
     }
+    .center p{
+        width: 6.8rem;
+    }
     .center img{
         height: 450.48px;
         width: 200px;
@@ -3121,6 +3044,9 @@ header {
         height: 289.75px;
         margin-left: -1.5rem;
         z-index: 2;
+    }
+    .left-most h1{
+        width: 8.5rem;
     }
     .left-most p{
         width: 7rem;
@@ -3139,7 +3065,7 @@ header {
         line-height: 14px;
     }
     .right{
-        margin-left: -6rem;
+        margin-left: -8rem;
     }
     .right p{
         width: 8rem;
@@ -3189,8 +3115,165 @@ header {
         position: relative;
         z-index: 1;
     }
+    .heading h1{
+        -webkit-text-stroke-width: 1px;
+    }
 }
 
-@media (max-width: 730px){
-    
+@media (max-width: 740px) and (min-width:601px){
+    .center p{
+        margin-left: -7rem;
+    }
+}
+
+@media (max-width: 730px) and (min-width:601px){
+    .head-txt h1{
+        font-size: 24px;
+    }
+    .head-txt h2{
+        font-size: 40px;
+        margin-left: 1.5rem;
+    }
+    .arrow{
+        margin-left: 26rem;
+    }
+    .left img{
+        width: 140px;
+    }
+    .left-most p{
+        margin-left: -6.5rem;
+    }
+    .pics h1{
+        font-size: 1rem;
+    }
+    .img1{
+        width: 300px;
+        height: 480px;
+        margin-top: 5.5rem;
+    }
+    .r-man h1{
+        font-size: 3.5rem;
+    }
+    .center{
+        margin-left: 1rem;
+    }
+    .center p{
+        margin-left: -6.5rem;
+        width: 7rem;
+    }
+    .right{
+        margin-left: -8rem;
+    }
+    .right img{
+        width: 155px;
+    }
+    .heading h2{
+        font-size: 3rem;
+    }
+    .heading h1{
+        font-size: 4rem;
+    }
+}
+
+@media (max-width: 710px) and (min-width:601px){
+    .arrow{
+        margin-left: 24rem;
+    }
+}
+
+@media (max-width: 700px) and (min-width:601px){
+    .left-most{
+        margin-left: -1rem;
+    }
+}
+
+@media (max-width: 680px) and (min-width:601px){
+    .arrow{
+        margin-left: 22rem;
+    }
+    .right{
+        margin-left: -8rem;
+    }
+    .right-most{
+        margin-left: -1rem;
+    }
+    .heading h2{
+        font-size: 2.5rem;
+    }
+    .heading h1{
+        font-size: 3.5rem;
+        margin-top: -1.6rem;
+    }
+}
+
+@media (max-width: 650px) and (min-width:601px){
+    .fantasy-head {
+        margin-left: -8.5rem;
+    }
+    .arrow{
+        font-size: 1.4rem;
+        margin-left: 23rem;
+    }
+    .pics h1{
+        font-size: 14px;
+    }
+    .pics p{
+        font-size: 10px;
+    }
+    .left-most img{
+        margin-top: 0rem;
+        height: 260px;
+    }
+    .left-most p{
+        margin-left: -7rem;
+    }
+    .left img{
+        width: 130px;
+        height: 270px;
+    }
+    .center p{
+        line-height: 10px;
+        width: 6rem;
+    }
+    .center img{
+        margin-left: -1.5rem;
+    }
+    .right p{
+        margin-left: 2rem;
+        width: 6rem;
+    }
+    .right{
+        margin-left: -7.5rem;
+    }
+    .right img{
+        width: 135px;
+        height: 300px;
+    }
+    .img1{
+        width: 250px;
+        margin-top: 9rem;
+        height: 420px;
+    }
+    .apps img{
+        width: 9.5rem;
+    }
+    .rect6{
+        margin-left: 26rem;
+        width: 10rem;
+    }
+}
+
+@media (max-width: 630px) and (min-width:601px){
+    .arrow{
+        margin-left: 21rem;
+    }
+}
+
+@media (max-width: 610px) and (min-width:601px){
+    .wheel h1{
+        font-size: 4rem;
+    }
+    .bts h2{
+        font-size: 2rem;
+    }
 }
