--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -9,6 +9,11 @@
   padding-right: 1.5rem;
 }
 
+@font-face {
+  font-family: "Poppins1";
+  src: url("../font/Poppins-ExtraLight.ttf") format("truetype");
+}
+
 .foot-link-div {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -454,13 +459,37 @@
   }
 
   #download-options-wrapper {
-    flex-direction: column;
+    /* flex-direction: column; */
     gap: 20px;
+    margin-left: auto;
+  }
+
+  .dow-arrow {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .dow-arrow img{
+    height: 56.5%;
+  }
+
+  .dow-arrow p{
+    color: #282828;
+    font-size: 6rem;
+    font-weight: bolder;
+    font-family: Poppins1;
+    /* overflow: hidden; */
+    margin-left: -1.3rem;
+    letter-spacing: -1rem;
+
   }
 
   .download-options {
     width: 250px !important;
     height: auto;
+    margin: auto;
+    z-index: 2;
   }
 
   footer {
@@ -930,6 +959,58 @@
   }
 }
 
+@media(max-width: 710px){
+  .download-options{
+    width: 220px !important;
+  }
+  .dow-arrow p{
+    font-size: 5rem;
+    margin-top: 10px;
+  }
+  .dow-arrow img{
+    height: 55%;
+  }
+}
+
+@media(max-width: 640px){
+  .download-options{
+    width: 200px !important;
+  }
+  .dow-arrow p{
+    font-size: 4.5rem;
+    margin-top: 10px;
+    letter-spacing: -.7rem;
+  }
+}
+
+@media(max-width: 580px){
+  .download-options{
+    width: 190px !important;
+  }
+  .dow-arrow p{
+    font-size: 4.5rem;
+    margin-top: 10px;
+    letter-spacing: -.7rem;
+  }
+  .dow-arrow img{
+    height: 52%;
+  }
+}
+
+@media(max-width: 540px){
+  .download-options{
+    width: 170px !important;
+  }
+  .dow-arrow p{
+    font-size: 3.7rem;
+    margin-top: 10px;
+    letter-spacing: -.7rem;
+  }
+  .dow-arrow img{
+    height: 55%;
+  }
+}
+
 @media (max-width: 508px) {
   .li-underln {
     padding-top: 0.4rem;
@@ -956,6 +1037,32 @@
   .r-div {
     margin-right: -2.5rem;
   }
+
+  .download-options{
+    width: 155px !important;
+  }
+  .dow-arrow p{
+    font-size: 3.8rem;
+    margin-top: 10px;
+    letter-spacing: -.7rem;
+  }
+  .dow-arrow img{
+    height: 48%;
+  }
+}
+
+@media(max-width: 440px){
+  .download-options{
+    width: 140px !important;
+  }
+  .dow-arrow p{
+    font-size: 3.5rem;
+    margin-top: 5px;
+    letter-spacing: -.7rem;
+  }
+  .dow-arrow img{
+    height: 48%;
+  }
 }
 
 @media (max-width: 425px) {
@@ -969,6 +1076,20 @@
 
   .r-div {
     margin-right: -1.8rem;
+  }
+}
+
+@media(max-width: 400px){
+  .download-options{
+    width: 120px !important;
+  }
+  .dow-arrow p{
+    font-size: 3rem;
+    margin-top: 5px;
+    letter-spacing: -.55rem;
+  }
+  .dow-arrow img{
+    height: 48%;
   }
 }
 
